--- a/be/api-gateway/package.json
+++ b/be/api-gateway/package.json
@@ -11,5 +11,8 @@
     "debug": "~2.6.9",
     "express": "~4.17.1",
     "morgan": "~1.10.0"
+  },
+  "devDependencies": {
+    "axios": "^1.7.4"
   }
 }
