--- a/be/media-service/package.json
+++ b/be/media-service/package.json
@@ -1,15 +1,15 @@
 {
   "name": "media-service",
-  "module": "src/index.js",
-  "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest",
-    "prisma": "^5.18.0"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "bun ./bin/www.js",
+    "dev": "bun --hot ./bin/www.js"
   },
   "dependencies": {
-    "@prisma/client": "^5.18.0"
+    "cookie-parser": "~1.4.5",
+    "debug": "~2.6.9",
+    "express": "~4.17.1",
+    "morgan": "~1.10.0"
   }
 }
