--- a/be/media-service/package.json
+++ b/be/media-service/package.json
@@ -7,9 +7,13 @@
     "dev": "bun --hot ./bin/www.js"
   },
   "dependencies": {
+    "@prisma/client": "^5.18.0",
     "cookie-parser": "~1.4.5",
     "debug": "~2.6.9",
     "express": "~4.17.1",
     "morgan": "~1.10.0"
+  },
+  "devDependencies": {
+    "prisma": "^5.18.0"
   }
 }
