--- a/be/media-service/package.json
+++ b/be/media-service/package.json
@@ -14,6 +14,8 @@
     "morgan": "~1.10.0"
   },
   "devDependencies": {
+    "base64-img": "^1.0.4",
+    "is-base64": "^1.1.0",
     "prisma": "^5.18.0"
   }
 }
